--- a/src/assets/bulma.css
+++ b/src/assets/bulma.css
@@ -2060,7 +2060,7 @@ a.box:active {
 }
 
 .button.is-link {
-  background-color: #3273dc;
+  background-color: #276cda;
   border-color: transparent;
   color: #fff;
 }
