--- a/src/assets/bulma.css
+++ b/src/assets/bulma.css
@@ -7062,7 +7062,7 @@ a.navbar-item:hover, a.navbar-item.is-active,
   white-space: nowrap;
 }
 
-.pagination-link.is-current {
+.pagination-link.isCurrent {
   background-color: #3273dc;
   border-color: #3273dc;
   color: #fff;
